tests/syntax/good/testfile-impl-3.rs
struct S {
    x : i32,
    y : u32,
}


impl S {
    fn left(&self) -> i32 {
        self.x
    }
}

fn main() {
    let s = 3;
}