tests/syntax/bad/testfile-impl-3.rs

struct S {
    x : i32,
    y : u32,
}

impl S {
    fn left(&self : Self) -> i32 {
        self.x
    }
}

fn main() {
    let x = 0;
}